dev-eks-k8s/orders/2-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: orders-vsvc
  namespace: demo
spec:
  hosts:
    - "api.travelersources.com"   # updated from api.localdev.me
  gateways:
    - api-gateway                 # updated to your API Gateway with TLS
  http:

    # ----------------- Canary Route -----------------
    - name: orders-canary-debug
      match:
        - uri:
            prefix: "/orders/"
          headers:
            x-canary:
              exact: "true"
        - uri:
            exact: "/orders"
          headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: orders-canary
            port:
              number: 3004

    # ----------------- Stable Route -----------------
    - name: orders-route
      match:
        - uri:
            prefix: "/orders/"
        - uri:
            exact: "/orders"
      corsPolicy:
        allowOrigins:
          - exact: "https://travelersources.com"  # update from localdev
        allowMethods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
        allowHeaders: ["*"]
        allowCredentials: true
        maxAge: "1h"
      route:
        - destination:
            host: orders-stable
            port:
              number: 3004
          weight: 100
        - destination:
            host: orders-canary
            port:
              number: 3004
          weight: 0
